# LLMOps

./: pyproject.toml  requirements.txt
data/: AgenticAI.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/utils/: config_loader.py  model_loader.py
notebook/: RAG.ipynb  experiments.ipynb
